--- a/Vision/image_classification/templates/image_classification/base.html
+++ b/Vision/image_classification/templates/image_classification/base.html
@@ -15,8 +15,8 @@
 
     <div class="container">
         {% block content %}
-        <!-- Вміст сторінки буде тут -->
         {% endblock %}
     </div>
+    <script src="{% static 'scripts.js' %}"></script>
 </body>
 </html>
