--- a/Vision/image_classification/templates/image_classification/image_upload.html
+++ b/Vision/image_classification/templates/image_classification/image_upload.html
@@ -3,6 +3,7 @@
 {% block content %}
 <div class="upload-container">
   <h2 class="upload-heading">Upload your image</h2>
+  <p style="font-size: smaller;">Our model can identify the following categories from your photo: Airplane, Automobile, Bird, Cat, Deer, Dog, Frog, Horse, Ship, Truck. Please ensure your image is clear and well-lit for the best results.</p>
 
   <div class="image-preview" id="imagePreview">
     <img src="" alt="Image Preview" class="image-preview__image" id="imgPreview" style="display: none;">
