--- a/Vision/image_classification/templates/image_classification/base.html
+++ b/Vision/image_classification/templates/image_classification/base.html
@@ -8,6 +8,7 @@
     <title>Image Classifier</title>
     <link rel="stylesheet" href="{% static 'style.css' %}">
     <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="header">
